# tempotalk

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  integration.yml  release.yml
assets/: streamlit.css
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: sales_copilot.baml
config/: defaults.smoke.toml  defaults.toml
scripts/: generate_mock_data.py  run_cli.py
src/tempus_copilot/: __init__.py  cli.py  config.py  models.py  output_schema.py  pipeline.py  pipeline_support.py  ui_service.py
src/tempus_copilot/ingest/: __init__.py  crm.py  kb.py  market.py
src/tempus_copilot/llm/: __init__.py  baml_adapter.py
src/tempus_copilot/rag/: chunking.py  embed.py  faiss_index.py
src/tempus_copilot/ranking/: __init__.py  (+1 more)
tests/: conftest.py  test_cli.py  test_config.py  test_golden_run.py  test_output_schema.py  test_pipeline.py  test_pipeline_edges.py  test_pipeline_support.py  test_runtime_architecture.py  test_streamlit_app.py  test_strict_citations.py  test_ui_service.py
tests/fixtures/: crm_notes.csv  market_intelligence.csv  product_kb.md
tests/helpers/: fakes.py  output_builders.py
tests/ingest/: test_crm.py  test_kb.py  test_market.py
tests/integration/: test_live_gemini.py  test_live_ollama.py
tests/llm/: test_baml_adapter.py
tests/rag/: test_chunking.py  test_embed.py  test_faiss_index.py  test_retrieval_quality.py
tests/ranking/: test_score.py
tests/scripts/: test_generate_mock_data.py
(+3 files in other folders)
